Created the bulk of the body.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Micah Cortese">
+    <meta name="description" content="A website for testimonial cards using HTML and CSS">
+    <meta name="keywords" content="HTML, CSS, testimonial cards">
     <title>Testimonial Cards</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
-    
+    <div class="container">
+        <div id="card-1">
+            <div id="testimonial-1">
+                <img src="images/default_profile_image.png" id="image-1" alt="default_profile_image">
+                <p>I have been solving all the project ideas on roadmap.sh and I am surprised how far I have come from where I started.</p>
+                <br>
+                <p>Highly recommend</p>
+            </div>
+            <div id="author-1">
+                <p class="author">Artem Jones</p>
+                <p class="occupation">Junior Frontend Developer</p>
+            </div>
+        </div>
+        <div id="card-2">
+            <div id="testimonial-2">
+                <img src="images/default_profile_image.png" id="image-2" alt="default_profile_image">
+                <p>Since starting my career in 2021, I have only followed one resource, roadmap.sh, it truly helped me go from 0 to have a job and changing the financial trajectory of my family.</p>
+            </div>
+            <div id="author-2">
+                <p class="author">John Billy Joe</p>
+                <p class="occupation">Junior Frontend Developer</p>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div id="card-3">
+            <div id="testimonial-3">
+                <img src="images/default_profile_image.png" id="image-3" alt="default_profile_image">
+                <p>I find myself recommending roadmap.sh to all the internees or junior developers. It's a great way to skill up and grow in your career.</p>
+            </div>
+            <div id="author-3">
+                <p class="author">Jackie Mackle</p>
+                <p class="occupation">Engineering Manager</p>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div id="card-4">
+            <div id="testimonial-4">
+                <img src="images/default_profile_image.png" id="image-1" alt="default_profile_image">
+                <p>roadmap.sh is an incredible resource. I was fortunate to discover it during my university days in 2018. Back then, it was just a single repository with three images. It's amazing to see how much impact it has had on millions of lives since then.</p>
+            </div>
+            <div id="author-4">
+                <p class="author">Chris Pollock</p>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
