--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <div id="card-1">
             <div id="testimonial-1">
                 <p>I have been solving all the project ideas on roadmap.sh and I am surprised how far I have come from where I started.</p>
-                <br>
                 <p>Highly recommend</p>
             </div>
             <div id="author-1">
@@ -36,9 +35,11 @@
         </div>
     </div>
     <div class="container">
+        <div id="card-3-image">
+            <img src="images/default_profile_image.png" id="image-3" alt="default_profile_image">
+        </div>
         <div id="card-3">
             <div id="testimonial-3">
-                <img src="images/default_profile_image.png" id="image-3" alt="default_profile_image">
                 <p>I find myself recommending roadmap.sh to all the internees or junior developers. It's a great way to skill up and grow in your career.</p>
             </div>
             <div id="author-3">
