--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
         <div id="card-1">
             <div id="testimonial-1">
                 <p>I have been solving all the project ideas on roadmap.sh and I am surprised how far I have come from where I started.</p>
-                <p>Highly recommend</p>
-            </div>
-            <div id="author-1">
+                <p>Highly recommended!</p>
+            </div>  
+            <div id="card-1-author">
                 <img src="images/default_profile_image.png" id="image-1" alt="default_profile_image">
-                <p class="author">Artem Jones</p>
-                <p class="occupation">Junior Frontend Developer</p>
+                <p id="author-1">Artem Jones</p>
+                <p id="occupation-1">Junior Frontend Developer</p>
             </div>
         </div>
         <div id="card-2">
             <div id="testimonial-2">
                 <p>Since starting my career in 2021, I have only followed one resource, roadmap.sh, it truly helped me go from 0 to have a job and changing the financial trajectory of my family.</p>
             </div>
-            <div id="author-2">
+            <div id="card-2-author">
                 <img src="images/default_profile_image.png" id="image-2" alt="default_profile_image">
-                <p class="author">John Billy Joe</p>
-                <p class="occupation">Junior Frontend Developer</p>
+                <p id="author-2">John Billy Joe</p>
+                <p id="occupation-2">Junior Frontend Developer</p>
             </div>
         </div>
     </div>
@@ -39,12 +39,12 @@
             <img src="images/default_profile_image.png" id="image-3" alt="default_profile_image">
         </div>
         <div id="card-3">
+            <div id="card-3-author">
+                <p id="author-3">Jackie Mackle</p>
+                <p id="occupation-3">Engineering Manager</p>
+            </div>
             <div id="testimonial-3">
                 <p>I find myself recommending roadmap.sh to all the internees or junior developers. It's a great way to skill up and grow in your career.</p>
-            </div>
-            <div id="author-3">
-                <p class="author">Jackie Mackle</p>
-                <p class="occupation">Engineering Manager</p>
             </div>
         </div>
     </div>
@@ -53,9 +53,9 @@
             <div id="testimonial-4">
                 <p>roadmap.sh is an incredible resource. I was fortunate to discover it during my university days in 2018. Back then, it was just a single repository with three images. It's amazing to see how much impact it has had on millions of lives since then.</p>
             </div>
-            <div id="author-4">
+            <div id="card-4-author">
                 <img src="images/default_profile_image.png" id="image-4" alt="default_profile_image">
-                <p class="author">Chris Pollock</p>
+                <p id="author-4">Chris Pollock</p>
             </div>
         </div>
     </div>
